--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <base target="_blank">
   <meta charset="UTF-8" />
-  <title>Anon Developer</title>
+  <title>Noah Developer</title>
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
@@ -18,17 +18,22 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Anon Developer&nbsp<a href="deedy.pdf" style="color: white;"><img src="https://png.icons8.com/office/40/000000/open-resume.png" height="35" width="35"></a></h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Noah Savino&nbsp
+        <a href="Resume (2).pdf" style="color: white;"><img src="./assets/icons8-resume-64.png" height="35" width="35"></a>
+        <a href="./projects.html" style="color: white;"><img src="./assets/icons8-group-of-projects-64.png" height="35" width="35"></a>
+  </h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
-    <a href="https://www.linkedin.com/in/#/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
+    <a href="https://www.linkedin.com/in/noah-savino-741ba9204/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://www.facebook.com/#/" style="color: white;"><i class="fab fa-facebook" style="font-size: 2em;"></i></a>
+    <a href="https://github.com/Lilcalc/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
     &nbsp
-    <a href="https://github.com/#/" style="color: white;"><i class="fab fa-github" style="font-size: 2em;"></i></a>
+    <a href="./about.html" style="color: white;"><i class="fa-solid fa-address-card" style="font-size: 2em"></i></a>
     &nbsp
-    <a href="https://medium.com/@#/" style="color: white;"><i class="fab fa-medium" style="font-size: 2em;"></i></a>
-  </div>
+   </div>
 </div>
 
+<a target="_blank" href="https://icons8.com/icon/48263/undo">Undo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icon/44834/resume">Resume</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icon/cHppp0h3lMK6/group-of-projects">Group of Projects</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 </body>
 </html>
