updated portfolio links

--- a/projects.html
+++ b/projects.html
@@ -21,74 +21,18 @@
                 <a href="./index.html" style="color:white;"><img src="./assets/icons8-undo-64.png" height="35" width="35"></a>
             </h2>
               <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
-          <a href="https://lilcalc.github.io/Challenges/Docs/urban-octo-telegram-main/Develop/" style="color: white;"><img src="./images/Gold-Glitter-Glow-Stones-Jewelry-Patterns-Design-Abstract-Bright-Light-Wallpapers.jpg" height="100" width="200">Horieseon Services</a>
+          <a href="https://lilcalc.github.io/Challenges/Docs/urban-octo-telegram-main/Develop/" style="color: white;"><img src="./images/challeng-1-refactor-code-smaller.jpg" height="200" width="300"></a>
           &nbsp
-          <a href="https://supportlocackc123.herokuapp.com/" style="color: white;"><img src="./images/Gold-Glitter-Glow-Stones-Jewelry-Patterns-Design-Abstract-Bright-Light-Wallpapers.jpg" height="100" width="200">Support Local KC</a>
+          <a href="https://supportlocackc123.herokuapp.com/" style="color: white;"><img src="./images/Screen Shot 2022-07-08 at 9.28.30 AM-1.png" height="200" width="300"></a>
           &nbsp
-          <a href="https://samschool789.github.io/sporting-events/" style="color: white;"><img src="./images/Gold-Glitter-Glow-Stones-Jewelry-Patterns-Design-Abstract-Bright-Light-Wallpapers.jpg" height="100" width="200">Concert Explorer</a>
+          <a href="https://samschool789.github.io/sporting-events/" style="color: white;"><img src="./images/Screen Shot 2022-05-05 at 8.16.34 PM.png" height="200" width="300"></a>
           &nbsp
-          <a href="https://samschool789.github.io/sporting-events/" style="color: white;"><img src="./images/Gold-Glitter-Glow-Stones-Jewelry-Patterns-Design-Abstract-Bright-Light-Wallpapers.jpg" height="100" width="200">Concert Explorer</a>
+          <a href="https://github.com/LilCalc/Babbling_Brook/" style="color: white;"><img src="./images/Screen Shot 2022-06-13 at 3.41.26 PM-1.png" height="200" width="300"></a>
           &nbsp
-          <a href="https://samschool789.github.io/sporting-events/" style="color: white;"><img src="./images/Gold-Glitter-Glow-Stones-Jewelry-Patterns-Design-Abstract-Bright-Light-Wallpapers.jpg" height="100" width="200">Concert Explorer</a>
+          <a href="https://infinite-taiga-71296.herokuapp.com/" style="color: white;"><img src="./images/172080936-6d98e2d5-04f8-4706-95a0-37f7d957e064.png" height="200" width="300"></a>
           &nbsp
-          <a href="https://samschool789.github.io/sporting-events/" style="color: white;"><img src="./images/Gold-Glitter-Glow-Stones-Jewelry-Patterns-Design-Abstract-Bright-Light-Wallpapers.jpg" height="100" width="200">Concert Explorer</a>
+          <a href="https://lilcalc.github.io/Javascript-Password-Generator/" style="color: white;"><img src="./images/162631493-4a0f4fed-c94e-40de-8276-64e12a13ef66.png" height="200" width="300"></a>
           &nbsp
          </div>
       </div>
-
-<article>
-
-    <div id="work" class="work-wrapper"> 
-        <div class="work-grid-container"> 
-            <div class="work-item work-title"> 
-                <p> Work </p>
-            </div>
-            <div onclick="projectClicked('challenge-1-refactor')" alt="Image Displaying the Horiseon landing Page" title="Horiseon landing Page" target="_blank" style="cursor: pointer;" class="work-item-project challenge-1-refactor">
-                <span class="span-background"> 
-                    <h3>Horiseon Services</h3>
-                    <span class="lower-text">HTML/CSS</span> 
-                </span>
-            </div>
-            <div onclick="projectClicked('Support-local-kc')" alt="Image Displaying the Support-local-kc landing Page" title="Support-local-kc landing page" style="cursor: pointer;" class="work-item-project Support-local-kc">
-                <span class="span-background">
-                    <h3>Support-local-kc</h3>
-                    <span class="lower-text">Javascript/SQL</span>
-                </span>
-            </div>
-            <div onclick="projectClicked('concert-explorer')" alt="Image Displaying the concert-explorer landing page" title="concert-explorer landing page" style="cursor: pointer;" class="work-item-project concert-explorer">
-                <span class="span-background">
-                    <h3>Concert Explorer</h3>
-                    <span class="lower-text">Javascript</span>
-                </span>
-            </div>
-            <div onclick="projectClicked(`babblingBrook`)" alt="Image Displaying babblingBrook" title="babblingBrook" style="cursor: pointer;" class="work-item-project babblingBrook">
-                <span class="span-background">
-                    <h3>Babbling Brook</h3>
-                    <span class="lower-text">Javascript/SQL</span>
-                </span>
-            </div>
-            </div>
-        </div>
-    </div>
-</article>
-<script> 
-    function projectClicked(input) { 
-        var input = input; 
-
-        if (input == "challenge-1-refactor") { 
-            window.open("https://lilcalc.github.io/Challenges/Docs/urban-octo-telegram-main/Develop/");
-        } else if (input == "Support-local-kc") {
-            window.open("https://supportlocackc123.herokuapp.com/");
-        } 
-        else if (input == 'concert-explorer') {
-            window.open('https://samschool789.github.io/sporting-events/')
-        }
-        else if (input == `babblingBrook`) {
-            window.open(`https://github.com/LilCalc/Babbling_Brook`)
-        }
-        {
-            return true; 
-        }
-    };
-</script>
 </body>
